# airswap-rs

./: .gitignore  Cargo.toml
abi/: registry_v4.json  swap_erc20.json
claim-leafs-builder/: package.json  pnpm-lock.yaml
claim-leafs-builder/src/: main.ts  merkle.ts  proposals.ts  snapshot.ts  votes.ts
cli/: .env  Cargo.toml
cli/src/: main.rs
cli/src/actions/: action.rs  get_makers.rs  get_pricing.rs  get_protocols.rs  get_tokens.rs  mod.rs  quote.rs
cli/src/cli/: mod.rs
crates/airswap/: Cargo.toml
crates/airswap/abi/: pool.json
crates/airswap/proposals/: proposals.json
crates/airswap/schema/: snapshot.graphql
crates/airswap/src/: config.rs  lib.rs
crates/airswap/src/claim/: grouped_proposals.rs  merkle.rs  mod.rs  proposal_group.rs  vote.rs
crates/airswap/src/claim/snapshot/: mod.rs  proposals.rs  types.rs  votes_for_proposals.rs
crates/airswap/src/maker/: client.rs  config.rs  error.rs  mod.rs  service.rs
crates/airswap/src/maker/json_rpc/: level.rs  mod.rs  order_params.rs  order_payload.rs  payload.rs  pricing.rs  pricing_params.rs  pricing_payload.rs  protocol.rs  protocols_payload.rs  request.rs  response_error.rs  result_payload.rs
crates/airswap/src/pool/: constants.rs  contract.rs  mod.rs
crates/airswap/src/registry/: client.rs  config.rs  maker.rs  maker_with_supported_tokens.rs  mod.rs
crates/airswap/src/swap/: mod.rs
crates/airswap/tests/: maker.rs  registry.rs  snapshot.rs
src/: lib.rs
src/maker/: client.rs  error.rs  mod.rs  service.rs
src/maker/json_rpc/: error_payload.rs  level.rs  mod.rs  order_payload.rs  pricing.rs  pricing_payload.rs  response.rs  response_error.rs  response_result.rs  result_payload.rs  signature.rs
src/registry/: mod.rs
src/swap/: mod.rs
tests/: registry.rs
