[workspace]
members = ["cli", "crates/*"]
resolver = "2"

[workspace.dependencies]
erc20 = { git = "https://github.com/leruaa/erc20-rs" }
alloy-primitives = "0.6"
alloy-sol-types = { version = "0.6" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "11b8031" }
alloy-providers = { git = "https://github.com/alloy-rs/alloy", rev = "11b8031" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "11b8031" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "11b8031" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "11b8031" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "11b8031" }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", rev = "11b8031" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "11b8031" }
num-traits = "0.2"
