[workspace]
members = ["cli", "crates/*"]
resolver = "2"

[workspace.dependencies]
erc20 = { git = "https://github.com/leruaa/erc20-rs" }
alloy-primitives = "0.6"
alloy-sol-types = { version = "0.6" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "b7eb33d" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "b7eb33d" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "b7eb33d" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "b7eb33d" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "b7eb33d" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "b7eb33d" }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", rev = "b7eb33d" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "b7eb33d" }
num-traits = "0.2"
