[package]
name = "airswap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.4"
futures = "0.3"
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true, features = ["json"] }
alloy-network = { workspace = true }
alloy-providers = { workspace = true }
alloy-rpc-client = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-transport = { workspace = true }
alloy-json-rpc = { workspace = true }
alloy-pubsub = { workspace = true }
alloy-transport-http = { workspace = true, features = ["hyper"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.44"
async-trait = "0.1"
once_cell = "1.19.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
dotenv = "0.15"
