[package]
name = "airswap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.4", features = ["filter"] }
futures = "0.3"
alloy = { workspace = true, features = [
    "network",
    "providers",
    "transports",
    "transport-http",
    "pubsub",
    "rpc",
    "rpc-types",
    "rpc-types-eth",
    "rpc-client",
    "json-rpc",
] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.44"
async-trait = "0.1"
once_cell = "1.19.0"
bigdecimal = "0.4"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
dotenv = "0.15"
