[package]
name = "airswap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["claim"]
claim = ["dep:cynic", "dep:itertools"]

[dependencies]
tokio = { version = "1", features = ["sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.5", features = ["filter"] }
futures = "0.3"
alloy = { workspace = true, features = [
    "network",
    "providers",
    "transports",
    "transport-http",
    "contract",
    "pubsub",
    "rpc",
    "rpc-types",
    "rpc-types-eth",
    "rpc-client",
    "json-rpc",
    "sol-types",
    "json",
] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.44"
async-trait = "0.1"
once_cell = "1.19.0"
bigdecimal = "0.4"
tracing = "0.1"
cynic = { version = "3.7", features = ["http-reqwest"], optional = true }
itertools = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
dotenv = "0.15"
